// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatNumber.vue > Should show a link 1`] = `
"<div data-v-db72b064="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <div class="v-card-item">
    <!---->
    <div class="v-card-item__content">
      <!---->
      <div class="v-card-subtitle">
        <div data-v-db72b064="" class="">Stat</div>
        <!--v-if-->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <div data-v-db72b064="" class="v-card-text text-h3 text-medium-emphasis" align="center"><a data-v-db72b064="" style="text-decoration: none;">1</a></div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`StatNumber.vue > Should show a number 1`] = `
"<div data-v-db72b064="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <div class="v-card-item">
    <!---->
    <div class="v-card-item__content">
      <!---->
      <div class="v-card-subtitle">
        <div data-v-db72b064="" class="">Stat</div>
        <!--v-if-->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <div data-v-db72b064="" class="v-card-text text-h3 text-medium-emphasis" align="center"><span data-v-db72b064="">1</span></div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`StatNumber.vue > Should show format if erc20 1`] = `
"<div data-v-db72b064="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <div class="v-card-item">
    <!---->
    <div class="v-card-item__content">
      <!---->
      <div class="v-card-subtitle">
        <div data-v-db72b064="" class="">Stat</div>
        <!--v-if-->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <div data-v-db72b064="" class="v-card-text text-h3 text-medium-emphasis" align="center"><span data-v-db72b064="">83,742,318</span></div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`StatNumber.vue > Should show the info tooltip 1`] = `
"<div data-v-db72b064="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <div class="v-card-item">
    <!---->
    <div class="v-card-item__content">
      <!---->
      <div class="v-card-subtitle">
        <div data-v-db72b064="" class="absolute">Stat</div>
        <div data-v-db72b064="" class="text-right"><i data-v-db72b064="" class="mdi-information mdi v-icon notranslate v-theme--light v-icon--size-small" aria-hidden="true" aria-describedby="v-tooltip-0"></i>
          <!--teleport start-->
          <!--teleport end-->
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <div data-v-db72b064="" class="v-card-text text-h3 text-medium-emphasis" align="center"><span data-v-db72b064="">1</span></div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;
